--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
           </div>
         </div>
         <div class="content">
-          <h1 class="hero-title">Elegant Ethnic Trendy Womens Fashion</h1>
-          <h2 class="hero-subtitle">Your Dream Outfit Starts Here</h2>
+          <h1 class="hero-title">Elegant Ethnic Trendy</h1>
+          <h2 class="hero-subtitle">Womens Fashion</h2>
         </div>
       </section>
 
