Category selection added

--- a/index.html
+++ b/index.html
@@ -77,7 +77,11 @@
       </section>
 
       <!-- PRODUCTS SECTION -->
-      <section id="products" class="container mt-5 pt-5"></section>
+      <section id="products" class="container mt-5 pt-5">
+        <div id="cd-collections-nav" class="mb-3">
+          <!-- Category navigation is rendered here by store.js -->
+        </div>
+      </section>
 
       <!-- INFO CARDS -->
       <section class="container mt-5 pt-5">
