--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
             <li class="nav-item"><a class="nav-link active" href="#">HOME</a></li>
             <li class="nav-item"><a class="nav-link active" href="#products">COLLECTIONS</a></li>
             <li class="nav-item"><a class="nav-link active" href="#about-us">ABOUT US</a></li>
+            <!-- Mobile-only Categories dropdown -->
+            <li class="nav-item dropdown d-lg-none">
+              <a class="nav-link dropdown-toggle" href="#" id="cdCategoriesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                CATEGORIES
+              </a>
+              <ul id="cd-mobile-categories-dropdown" class="dropdown-menu" aria-labelledby="cdCategoriesDropdown"></ul>
+            </li>
           </ul>
         </div>
       </div>
@@ -214,24 +221,32 @@
         var navbar = document.querySelector('nav.navbar');
         if (!collapseEl || !navbar || typeof bootstrap === 'undefined') return;
 
+        // Close when clicking outside the navbar
         document.addEventListener('click', function(e) {
-          // Only act if menu is open
           var isOpen = collapseEl.classList.contains('show');
           if (!isOpen) return;
-
-          // Ignore clicks inside navbar or on the toggler
           var clickedInside = e.target.closest('.navbar') || e.target.closest('.navbar-toggler');
           if (clickedInside) return;
-
-          // Close the collapse via Bootstrap API
           try {
             var bsCollapse = bootstrap.Collapse.getInstance(collapseEl) || new bootstrap.Collapse(collapseEl, { toggle: false });
             bsCollapse.hide();
           } catch (_) {
-            // Fallback: toggle aria-expanded if needed (keeps behavior safe)
             collapseEl.classList.remove('show');
           }
         }, true);
+
+        // Also close when a nav link is clicked
+        var links = collapseEl.querySelectorAll('.nav-link');
+        links.forEach(function(link){
+          link.addEventListener('click', function(){
+            try {
+              var bsCollapse = bootstrap.Collapse.getInstance(collapseEl) || new bootstrap.Collapse(collapseEl, { toggle: false });
+              bsCollapse.hide();
+            } catch (_) {
+              collapseEl.classList.remove('show');
+            }
+          });
+        });
       })();
     </script>
 
