Code notes and corrections

--- a/policies/refund-policy.html
+++ b/policies/refund-policy.html
@@ -12,7 +12,6 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-navbar">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center" href="../index.html">
-        <!--<img src="../assets/images/logo.png" class="penguin-logo img-fluid" style="height:50px;">-->
         <span class="navbar-brand-text">CATHY'S DREAMY ATTIRE</span>
       </a>
 
@@ -39,32 +38,32 @@
     <p>We can't give any guarantees on colour fastness. Natural dyes like indigo will bleed during the first wash and we cannot offer any returns/exchanges in such cases.</p>
     <p>Slight colour variation may occur due to the differences in the display settings of your monitor, tablets, and mobile devices. And we can't offer an exchange or refund in these situations.</p>
     <p>Please read the wash and care instructions. Damage caused by employing the wrong methods of wash and care will not be considered as the reason for exchange/ refund.</p>
-    <p>If You have received the wrong product ie the colour, size, or defective/ damaged product we can replace it but it may be subject to the following conditions.**</p>
-    <h5>Eligibility **</h5>
+    <p>If You have received the wrong product i.e., the colour, size, or a defective/damaged product, we can replace it but it may be subject to the following conditions.</p>
+    <h5>Eligibility</h5>
     <p>
       Exchanges and returns will be accepted only for eligible <strong>items with intact tags, in unused and undamaged condition, and accompanied by a valid opening video</strong>.
     </p>
 
-    <h5>Timeline **</h5>
+    <h5>Timeline</h5>
     <p>
       Please contact us within <strong>3 days of delivery</strong> to initiate an exchange or return.
     </p>
 
-    <h5>Process **</h5>
+    <h5>Process</h5>
     <ul>
       <li>Message us on WhatsApp with your order details and reason.</li>
       <li>We will review and share next steps and pickup/return instructions.</li>
       <li>Upon receiving the item and quality check, we will process exchange or refund.</li>
     </ul>
 
-    <h5>Non-Returnable Items **</h5>
+    <h5>Non-Returnable Items</h5>
     <ul>
       <li>Customized or tailored items made specifically for you.</li>
       <li>Items with removed tags or signs of use/damage.</li>
       <li>Sale items if marked “End-of-Line Sale”.</li>
     </ul>
 
-    <h5>Refund Method **</h5>
+    <h5>Refund Method</h5>
     <p>
       Approved refunds are processed to your original payment method or as store credit, as applicable.
     </p>
@@ -81,7 +80,5 @@
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
   <script src="../js/bootstrap.min.js"></script>
-  <script src="../js/store.js"></script>
-  <script src="../js/zoom.js" defer></script>
 </body>
 </html>
