--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
 
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
-      rel="stylesheet"
-    />
+    <!-- Fonts used by CSS: Cormorant Garamond (brand), Playfair Display (subtitle) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -23,11 +22,13 @@
 
   <body>
 
+    <!-- Page Structure: Fixed Navbar, Hero, Products, Info Cards, Footer, Scripts -->
+
     <!-- FIXED NAVBAR -->
+    <!-- Top Navigation: brand, links, mobile dropdown -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-navbar">
       <div class="container">
         <a class="navbar-brand d-flex align-items-center" href="#">
-          <!--<img src="assets/images/logo.png" class="penguin-logo img-fluid" style="height:50px;">-->
           <span class="navbar-brand-text">CATHY'S DREAMY ATTIRE</span>
         </a>
 
@@ -59,6 +60,7 @@
 
     <main>
       <!-- HERO BANNER -->
+      <!-- Hero Banner: scrolling image strip + title/subtitle overlay -->
       <section class="hero-banner">
         <div class="hero-banners-strip" aria-hidden="true">
           <div class="hero-banners-track">
@@ -84,6 +86,7 @@
       </section>
 
       <!-- PRODUCTS SECTION -->
+      <!-- Products Section: category navigation rendered by store.js -->
       <section id="products" class="container mt-5 pt-5">
         <div id="cd-collections-nav" class="mb-3">
           <!-- Category navigation is rendered here by store.js -->
@@ -91,6 +94,7 @@
       </section>
 
       <!-- INFO CARDS -->
+      <!-- Info Cards: size chart toggle and exchange policy note -->
       <section class="container mt-5 pt-5">
         <div class="row">
           <div class="col-md-6 px-3">
@@ -128,8 +132,8 @@
                   <div class="card-body">
                     <h5 class="card-title">Free Exchanges</h5>
                     <p class="card-text">
-                      One of the many reasons you can shop with peace of mind.<b>**</b>
-                      ** Please read our Return & Refund policy.
+                      One of the many reasons you can shop with peace of mind.
+                      Please read our <a href="policies/refund-policy.html">Return & Refund policy</a>.
                     </p>
                   </div>
                 </div>
@@ -140,6 +144,7 @@
         </div>
       </section>
 
+      <!-- Inline Script: toggles size chart image visibility -->
       <script>
         function toggleSizeChart() {
           const img = document.getElementById("sizeChartImage");
@@ -148,6 +153,7 @@
       </script>
 
       <!-- FOOTER -->
+      <!-- Footer: about, contact, socials, policy links, copyright -->
       <section class="footer-section">
         <div class="container pb-5">
           <div class="row">
@@ -171,13 +177,13 @@
             <div class="col-sm pe-5 pt-3">
               <h5>Get in Touch</h5>
               <hr />
-              <a href="https://www.facebook.com/CathysDreamyAttire/" target="_blank">
+              <a href="https://www.facebook.com/CathysDreamyAttire/" target="_blank" rel="noopener noreferrer">
                 <i class="fa fa-facebook-square fa-2x pe-3"></i>
               </a>
-              <a href="https://www.instagram.com/cathys_dreamy_attire/" target="_blank">
+              <a href="https://www.instagram.com/cathys_dreamy_attire/" target="_blank" rel="noopener noreferrer">
                 <i class="fa fa-instagram fa-2x pe-3"></i>
               </a>
-              <a href="https://wa.me/917907555924?text=Hello%20Cathy%E2%80%99s%20Dreamy%20Attire" target="_blank">
+              <a href="https://wa.me/917907555924?text=Hello%20Cathy%E2%80%99s%20Dreamy%20Attire" target="_blank" rel="noopener noreferrer">
                 <i class="fa fa-whatsapp fa-2x pe-3"></i>
               </a>
             </div>
@@ -201,6 +207,7 @@
             </p>
           </footer>
 
+          <!-- Inline Script: sets current year in footer -->
           <script>
             document.getElementById("yearHome").textContent = new Date().getFullYear();
           </script>
@@ -210,10 +217,12 @@
 
     </main>
 
+    <!-- Core Scripts: Bootstrap, store logic, image zoom (deferred) -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/store.js"></script>
     <script src="js/zoom.js" defer></script>
 
+    <!-- Navbar UX: auto-close mobile menu when clicking outside or selecting a link -->
     <script>
       // Auto-close mobile navbar when clicking outside of it
       (function() {
