--- a/index.html
+++ b/index.html
@@ -108,14 +108,10 @@
                     <h5 class="card-title">Find the Perfect Fit</h5>
                     <p class="card-text">
                       Everybody is different, which is why we offer styles for every body.
+                      <!-- Info card: link opens the same modal size chart used in product cards -->
+                      <a href="#" class="ms-1" onclick="window.showSizeChartModal && window.showSizeChartModal(); return false;">View 
+                        Size Chart</a>
                     </p>
-
-                    <button class="btn btn-outline-primary" type="button" onclick="toggleSizeChart()">
-                      View Size Chart
-                    </button>
-
-                    <img id="sizeChartImage" src="assets/images/size-chart.png" alt="Size Chart"
-                        style="display:none; margin-top:15px; max-width:100%;" />
                   </div>
                 </div>
               </div>
@@ -144,13 +140,7 @@
         </div>
       </section>
 
-      <!-- Inline Script: toggles size chart image visibility -->
-      <script>
-        function toggleSizeChart() {
-          const img = document.getElementById("sizeChartImage");
-          img.style.display = img.style.display === "none" ? "block" : "none";
-        }
-      </script>
+      <!-- Inline Script removed: size chart now opens a modal for desktop + mobile -->
 
       <!-- FOOTER -->
       <!-- Footer: about, contact, socials, policy links, copyright -->
@@ -256,6 +246,30 @@
             }
           });
         });
+      })();
+    </script>
+
+    <!-- Navbar visual: solid background after small scroll or when mobile menu is open -->
+    <script>
+      (function(){
+        var nav = document.querySelector('nav.fixed-navbar');
+        var collapseEl = document.getElementById('navbarNav');
+        if (!nav) return;
+
+        function updateSolid() {
+          var y = window.pageYOffset || document.documentElement.scrollTop || 0;
+          var isOpen = collapseEl && collapseEl.classList.contains('show');
+          // Solid when scrolled beyond 24px or the menu is open on mobile
+          nav.classList.toggle('navbar-solid', y > 24 || !!isOpen);
+        }
+
+        updateSolid();
+        window.addEventListener('scroll', updateSolid, { passive: true });
+        window.addEventListener('resize', updateSolid);
+        if (collapseEl) {
+          collapseEl.addEventListener('shown.bs.collapse', updateSolid);
+          collapseEl.addEventListener('hidden.bs.collapse', updateSolid);
+        }
       })();
     </script>
 
