Font style updates

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <!-- Fonts used by CSS: Cormorant Garamond (brand), Playfair Display (subtitle) -->
+    <!-- Fonts: Lato for site-wide typography -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;600;700&display=swap" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -28,8 +28,10 @@
     <!-- Top Navigation: brand, links, mobile dropdown -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-navbar">
       <div class="container">
-        <a class="navbar-brand d-flex align-items-center" href="#">
+        <!-- Brand: title + small red tagline centered below -->
+        <a class="navbar-brand" href="#">
           <span class="navbar-brand-text">CATHY'S DREAMY ATTIRE</span>
+          <span class="navbar-brand-subtext text-danger">Stay Cool . Stay You</span>
         </a>
 
         <button
