--- a/index.html
+++ b/index.html
@@ -214,66 +214,8 @@
     <script src="js/store.js"></script>
     <script src="js/zoom.js" defer></script>
 
-    <!-- Navbar UX: auto-close mobile menu when clicking outside or selecting a link -->
-    <script>
-      // Auto-close mobile navbar when clicking outside of it
-      (function() {
-        var collapseEl = document.getElementById('navbarNav');
-        var navbar = document.querySelector('nav.navbar');
-        if (!collapseEl || !navbar || typeof bootstrap === 'undefined') return;
-
-        // Close when clicking outside the navbar
-        document.addEventListener('click', function(e) {
-          var isOpen = collapseEl.classList.contains('show');
-          if (!isOpen) return;
-          var clickedInside = e.target.closest('.navbar') || e.target.closest('.navbar-toggler');
-          if (clickedInside) return;
-          try {
-            var bsCollapse = bootstrap.Collapse.getInstance(collapseEl) || new bootstrap.Collapse(collapseEl, { toggle: false });
-            bsCollapse.hide();
-          } catch (_) {
-            collapseEl.classList.remove('show');
-          }
-        }, true);
-
-        // Also close when a nav link is clicked
-        var links = collapseEl.querySelectorAll('.nav-link');
-        links.forEach(function(link){
-          link.addEventListener('click', function(){
-            try {
-              var bsCollapse = bootstrap.Collapse.getInstance(collapseEl) || new bootstrap.Collapse(collapseEl, { toggle: false });
-              bsCollapse.hide();
-            } catch (_) {
-              collapseEl.classList.remove('show');
-            }
-          });
-        });
-      })();
-    </script>
-
-    <!-- Navbar visual: solid background after small scroll or when mobile menu is open -->
-    <script>
-      (function(){
-        var nav = document.querySelector('nav.fixed-navbar');
-        var collapseEl = document.getElementById('navbarNav');
-        if (!nav) return;
-
-        function updateSolid() {
-          var y = window.pageYOffset || document.documentElement.scrollTop || 0;
-          var isOpen = collapseEl && collapseEl.classList.contains('show');
-          // Solid when scrolled beyond 24px or the menu is open on mobile
-          nav.classList.toggle('navbar-solid', y > 24 || !!isOpen);
-        }
-
-        updateSolid();
-        window.addEventListener('scroll', updateSolid, { passive: true });
-        window.addEventListener('resize', updateSolid);
-        if (collapseEl) {
-          collapseEl.addEventListener('shown.bs.collapse', updateSolid);
-          collapseEl.addEventListener('hidden.bs.collapse', updateSolid);
-        }
-      })();
-    </script>
+    <!-- Navbar behavior: centralized in js/nav.js (auto-close + solid background) -->
+    <script src="js/nav.js"></script>
 
   </body>
 </html>
