--- a/policies/shipping-policy.html
+++ b/policies/shipping-policy.html
@@ -6,6 +6,10 @@
   <title>Shipping Policy • Cathy's Dreamy Attire</title>
   <link rel="stylesheet" href="../css/bootstrap.min.css" />
   <link rel="stylesheet" href="../css/style.css" />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+  />
 </head>
 <body class="policy-page">
   <!-- FIXED NAVBAR (same as home) -->
@@ -77,6 +81,13 @@ Custom or made-to-order items may take 7–14 business days, and we will notify 
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
+  <div class="container pb-5">
+    <a href="../index.html" class="back-home-btn" title="Back to Home">
+      <span class="fa fa-home"></span>
+      <span class="ms-2">Back to Home</span>
+    </a>
+  </div>
   <script src="../js/bootstrap.min.js"></script>
+  <script src="../js/nav.js"></script>
 </body>
 </html>
