Whatsapp icon in mobile

--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/store.js"></script>
     <script src="js/site.js"></script>
+    <script src="js/whatsapp-float.js"></script>
     <script src="js/zoom.js" defer></script>
 
     <!-- Navbar behavior: centralized in js/nav.js (auto-close + solid background) -->
