--- a/policies/shipping-policy.html
+++ b/policies/shipping-policy.html
@@ -104,5 +104,6 @@ Custom or made-to-order items may take 7–14 business days, and we will notify 
   </div>
   <script src="../js/bootstrap.min.js"></script>
   <script src="../js/nav.js"></script>
+  <script src="../js/whatsapp-float.js"></script>
 </body>
 </html>
