--- a/policies/privacy-policy.html
+++ b/policies/privacy-policy.html
@@ -104,5 +104,6 @@
   </div>
   <script src="../js/bootstrap.min.js"></script>
   <script src="../js/nav.js"></script>
+  <script src="../js/whatsapp-float.js"></script>
 </body>
 </html>
