--- a/policies/refund-policy.html
+++ b/policies/refund-policy.html
@@ -125,5 +125,6 @@
   </div>
   <script src="../js/bootstrap.min.js"></script>
   <script src="../js/nav.js"></script>
+  <script src="../js/whatsapp-float.js"></script>
 </body>
 </html>
