--- a/policies/refund-policy.html
+++ b/policies/refund-policy.html
@@ -10,50 +10,34 @@
 
     gtag('config', 'G-WYB41RBFGS');
   </script>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Refund Policy • Cathy's Dreamy Attire</title>
-  <link rel="stylesheet" href="../css/bootstrap.min.css" />
-  <link rel="stylesheet" href="../css/style.css" />
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-  />
-  <!-- Lato font for consistent typography across pages -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;600;700&display=swap" rel="stylesheet" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Return & Refund Policy • Cathy's Dreamy Attire</title>
+
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="../assets/css/style.css">
+
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfZ6P1hP8sS9gH7c3bq4e5bH7q0m0v5sZsE3q0qXbNY1VjU5k8d0wzZ8m7t3Qd2q0yWf0r7o6PqQy7C7B+Yx1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Cookie&family=Twinkle+Star&display=swap" rel="stylesheet">
-  <script src="../js/consent.js"></script>
 </head>
-<body>
-  <!-- FIXED NAVBAR (same as home) -->
-  <nav class="navbar navbar-expand-lg navbar-light fixed-navbar">
-    <div class="container">
-      <a class="navbar-brand d-flex align-items-center" href="../index.html">
-        <span class="navbar-brand-text">Cathy's Dreamy Attire</span>
-      </a>
 
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link active" href="../index.html#">HOME</a></li>
-          <li class="nav-item"><a class="nav-link active" href="../index.html#products">COLLECTIONS</a></li>
-          <li class="nav-item"><a class="nav-link active" href="../index.html#about-us">ABOUT US</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+<body id="top">
 
   <main>
-  <div class="container py-4" style="margin-top: 96px;">
-    <h1 class="mb-3">Return & Refund Policy</h1>
-    <p class="text-muted">Effective date: <span id="year"></span> • Cathy’s Dreamy Attire™</p>
+    <article>
+      <section class="section" style="padding-top: 120px;">
+        <div class="container">
+    <h1 class="h2 section-title mb-3">Return & Refund Policy</h1>
+    <p class="section-text">Effective date: <span id="yearHome">2025</span> • Cathy's Dreamy Attire™</p>
 
-    <p>We use handwoven material for our products; therefore, it may have some irregularities in weaves and can't be considered a defect.</p>
+    <p class="section-text">We use handwoven material for our products; therefore, it may have some irregularities in weaves and can't be considered a defect.</p>
     <p>We can't give any guarantees on colour fastness. Natural dyes like indigo will bleed during the first wash and we cannot offer any returns/exchanges in such cases.</p>
     <p>Slight colour variation may occur due to the differences in the display settings of your monitor, tablets, and mobile devices. And we can't offer an exchange or refund in these situations.</p>
     <p>Please read the wash and care instructions. Damage caused by employing the wrong methods of wash and care will not be considered as the reason for exchange/ refund.</p>
@@ -107,24 +91,20 @@
       </p>
 
     <h5>Contact</h5>
-    <p>
+    <p class="section-text">
       For return/refund queries, reach us at <strong>sales@cdastore.in</strong> or WhatsApp <strong>+91 7907555924</strong>.
     </p>
 
-    <hr />
-  </div>
+    <hr style="margin: 30px 0;" />
 
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
-  <div class="container pb-5">
-    <a href="../index.html" class="back-home-btn" title="Back to Home">
-      <span class="fa fa-home"></span>
-      <span class="ms-2">Back to Home</span>
-    </a>
   </div>
-  <script src="../js/bootstrap.min.js"></script>
-  <script src="../js/nav.js"></script>
-  <script src="../js/whatsapp-float.js"></script>
+      </section>
+    </article>
+  </main>
+
+  <!-- Custom JS -->
+  <script>document.getElementById('yearHome').textContent = new Date().getFullYear();</script>
+  <script src="../assets/js/script.js"></script>
+
 </body>
 </html>
