--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </li>
 
           <li class="navbar-item has-dropdown">
-            <a href="#collection-section" class="navbar-link">
+            <a href="#" class="navbar-link">
               SHOP
               <ion-icon name="chevron-down-outline" class="dropdown-icon"></ion-icon>
             </a>
@@ -94,20 +94,6 @@
 
       <!-- Hero removed -->
 
-
-      <!-- 
-        - #COLLECTION
-      -->
-
-      <section class="section collection" id="collection-section">
-        <div class="container">
-
-          <h2 class="h2 section-title">Collections</h2>
-
-          <ul class="collection-list has-scrollbar" id="collection-list"></ul>
-
-        </div>
-      </section>
 
 
       <!-- 
