--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Outfit:wght@100..900&family=Petit+Formal+Script&family=Zalando+Sans+Expanded:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Cookie&family=Twinkle+Star&display=swap" rel="stylesheet">
 
   <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
@@ -127,7 +127,7 @@
               <div class="service-card">
 
                 <div class="card-icon icon-shipping">
-                  <i class="fas fa-shipping-fast" style="font-size:48px;color:#3498db" aria-hidden="true"></i>
+                  <i class="fas fa-shipping-fast" style="font-size:48px;color:#EC7FA9" aria-hidden="true"></i>
                 </div>
 
                 <div>
@@ -145,7 +145,7 @@
               <div class="service-card">
 
                 <div class="card-icon icon-payment">
-                  <i class="fas fa-rupee-sign" style="font-size:48px;color:#2ecc71" aria-hidden="true"></i>
+                  <i class="fas fa-rupee-sign" style="font-size:48px;color:#BE5985" aria-hidden="true"></i>
                 </div>
 
                 <div>
@@ -163,7 +163,7 @@
               <div class="service-card">
 
                 <div class="card-icon icon-returns">
-                  <i class="fas fa-sync-alt" style="font-size:48px;color:#e67e22" aria-hidden="true"></i>
+                  <i class="fas fa-sync-alt" style="font-size:48px;color:#FFB8E0" aria-hidden="true"></i>
                 </div>
 
                 <div>
@@ -181,7 +181,7 @@
               <div class="service-card">
 
                 <div class="card-icon icon-support">
-                  <i class="fas fa-mobile-alt" style="font-size:48px;color:#9b59b6" aria-hidden="true"></i>
+                  <i class="fas fa-mobile-alt" style="font-size:48px;color:#EC7FA9" aria-hidden="true"></i>
                 </div>
 
                 <div>
