remove unwanted code

--- a/index.html
+++ b/index.html
@@ -92,10 +92,6 @@
   <main>
     <article>
 
-      <!-- Hero removed -->
-
-
-
       <!-- 
         - #PRODUCT
       -->
@@ -103,7 +99,7 @@
       <section class="section product" id="product-section">
         <div class="container">
 
-          <h2 class="h2 section-title" id="product-section-title">Bestsellers Products</h2>
+          <h2 class="h2 section-title" id="product-section-title">Shop By Category</h2>
 
           <ul class="filter-list" id="filter-list"></ul>
 
@@ -368,7 +364,7 @@
   <!-- CSV-driven renderers for sections -->
   <script src="./assets/js/csv-render.js"></script>
 
-  <!-- Footcap template script -->
+  <!-- tmplate script -->
   <script src="./assets/js/script.js"></script>
 
   <!-- Wire bag icon to cart modal -->
