--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                   <h3 class="h4 card-title">Free Shiping</h3>
 
                   <p class="card-text">
-                    All India Free Shipping. Please read our <a href="#" class="policy-link" data-policy="shipping">Shipping Policy</a>.
+                    All India Free Shipping. Please read our <a href="policies/shipping-policy.html" class="policy-link" data-policy="shipping">Shipping Policy</a>.
                   </p>
                 </div>
 
@@ -166,7 +166,7 @@
                   <h3 class="h4 card-title">Free Returns</h3>
 
                   <p class="card-text">
-                    One of the many reasons you can shop with peace of mind. Please read our <a href="#" class="policy-link" data-policy="refund">Return Policy</a>.
+                    One of the many reasons you can shop with peace of mind. Please read our <a href="policies/refund-policy.html" class="policy-link" data-policy="refund">Return Policy</a>.
                   </p>
                 </div>
 
