--- a/policies/shipping-policy.html
+++ b/policies/shipping-policy.html
@@ -18,17 +18,50 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="../assets/css/style.css">
 
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfZ6P1hP8sS9gH7c3bq4e5bH7q0m0v5sZsE3q0qXbNY1VjU5k8d0wzZ8m7t3Qd2q0yWf0r7o6PqQy7C7B+Yx1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- Font Awesome 5 (icons used throughout the site) -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/v4-shims.css" crossorigin="anonymous">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Outfit:wght@100..900&family=Petit+Formal+Script&family=Zalando+Sans+Expanded:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Cookie&family=Twinkle+Star&display=swap" rel="stylesheet">
 </head>
 
 <body id="top">
+
+  <!-- Header (shared) -->
+  <header class="header" data-header>
+    <div class="container">
+      <div class="overlay" data-overlay></div>
+      <a class="navbar-brand" href="/">
+        <span class="navbar-brand-text"></span>
+        <span class="navbar-brand-subtext text-danger">Stay Cool . Stay You</span>
+      </a>
+      <button class="nav-open-btn" data-nav-open-btn aria-label="Open Menu">
+        <ion-icon name="reorder-three-outline"></ion-icon>
+      </button>
+      <button class="header-action-btn" id="header-cart-btn" type="button" aria-label="Open cart">
+        <ion-icon name="bag-outline" aria-hidden="true"></ion-icon>
+        <span class="nav-action-badge" id="headerCartBadge" aria-live="polite" style="display:none">0</span>
+      </button>
+      <nav class="navbar" data-navbar>
+        <button class="nav-close-btn" data-nav-close-btn aria-label="Close Menu">
+          <ion-icon name="close-outline"></ion-icon>
+        </button>
+        <ul class="navbar-list">
+          <li class="navbar-item"><a href="/" class="navbar-link">HOME</a></li>
+          <li class="navbar-item has-dropdown">
+            <a href="#" class="navbar-link">SHOP <ion-icon name="chevron-down-outline" class="dropdown-icon"></ion-icon></a>
+            <ul class="dropdown-menu" id="shop-submenu"></ul>
+          </li>
+          <li class="navbar-item"><a href="#site-footer" class="navbar-link">CONTACT</a></li>
+        </ul>
+        <div class="navbar-social-links" id="navbar-social-links"></div>
+      </nav>
+    </div>
+  </header>
 
   <main>
     <article>
@@ -81,9 +114,86 @@ Custom or made-to-order items may take 7–14 business days, and we will notify 
     </article>
   </main>
 
-  <!-- Custom JS -->
-  <script>document.getElementById('yearHome').textContent = new Date().getFullYear();</script>
+  <!-- Footer (shared) -->
+  <footer class="footer">
+    <a id="site-footer"></a>
+    <div class="footer-top section">
+      <div class="container">
+        <div class="footer-brand">
+          <a href="#" class="logo">
+            <img src="../assets/images/logo.png" alt="" class="penguin-logo img-fluid" />
+          </a>
+          <p>
+            At <strong id="footer-brand-strong"></strong>, we believe every woman deserves to feel confident and beautiful in outfits made just for her.
+            We specialize in custom designing, personalized outfit customization, and offer a handpicked collection through our exclusive online boutique.
+          </p>
+          <hr />
+        </div>
+        <div class="footer-link-box">
+          <ul class="footer-list">
+            <li><p class="footer-list-title">Contact Us</p></li>
+            <li>
+              <a href="#" class="footer-link" id="footer-phone">
+                <ion-icon name="call"></ion-icon>
+                <span class="footer-link-text"></span>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="footer-link" id="footer-email">
+                <ion-icon name="mail"></ion-icon>
+                <span class="footer-link-text"></span>
+              </a>
+            </li>
+          </ul>
+          <div class="footer-list">
+            <p class="footer-list-title">Get in Touch</p>
+            <ul class="social-list" id="footer-social-list"></ul>
+          </div>
+          <ul class="footer-list">
+            <li><p class="footer-list-title">Policy Pages</p></li>
+            <li><a href="privacy-policy.html" class="footer-link"><ion-icon name="chevron-forward-outline"></ion-icon><span class="footer-link-text">Privacy Policy</span></a></li>
+            <li><a href="shipping-policy.html" class="footer-link"><ion-icon name="chevron-forward-outline"></ion-icon><span class="footer-link-text">Shipping Policy</span></a></li>
+            <li><a href="refund-policy.html" class="footer-link"><ion-icon name="chevron-forward-outline"></ion-icon><span class="footer-link-text">Return & Refund Policy</span></a></li>
+          </ul>
+          <div class="footer-list">
+            <p class="footer-list-title">Working Hours</p>
+            <table class="footer-table"><tbody>
+              <tr class="table-row"><th class="table-head" scope="row">Mon - Fri:</th><td class="table-data">9AM - 8PM</td></tr>
+              <tr class="table-row"><th class="table-head" scope="row">Sat:</th><td class="table-data">9AM - 10PM</td></tr>
+              <tr class="table-row"><th class="table-head" scope="row">Sun:</th><td class="table-data">Closed</td></tr>
+            </tbody></table>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <div class="container">
+        <p class="copyright">©<span id="yearHome"></span> • <span id="brand-copy-name"></span> • All Rights Reserved</p>
+      </div>
+    </div>
+  </footer>
+
+  <!-- PapaParse for CSV -->
+  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
+  <!-- Config inputs (sheet + brand) -->
+  <script src="../assets/js/inputs.js"></script>
+  <!-- Core site scripts and features -->
+  <script src="../assets/js/store.js"></script>
+  <!-- CSV-driven renderers for sections -->
+  <script src="../assets/js/csv-render.js"></script>
+  <!-- Template script -->
   <script src="../assets/js/script.js"></script>
+  <!-- Wire bag icon to cart modal -->
+  <script>
+    document.addEventListener('DOMContentLoaded', function(){
+      var headerCart = document.getElementById('header-cart-btn');
+      if (headerCart) headerCart.addEventListener('click', function(){ if (window.cdShowCart) window.cdShowCart(); });
+      var yh = document.getElementById('yearHome'); if (yh) yh.textContent = new Date().getFullYear();
+    });
+  </script>
+  <!-- Ionicons -->
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
 </body>
 </html>
