Policy page fixes

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             <img src="assets/images/logo.png" alt="" class="penguin-logo img-fluid" />
           </a>
           <p>
-            At <strong id="footer-brand-strong"></strong>, we believe every woman deserves to feel confident and beautiful in outfits made just for her.
+            At <strong id="brand-name-strong"></strong>, we believe every woman deserves to feel confident and beautiful in outfits made just for her.
             We specialize in custom designing, personalized outfit customization, and offer a handpicked collection through our exclusive online boutique.
           </p>
           <hr />
