--- a/policies/refund-policy.html
+++ b/policies/refund-policy.html
@@ -65,10 +65,11 @@
 
   <main>
     <article>
-      <section class="section" style="padding-top: 120px;">
-        <div class="container">
-    <h1 class="h2 section-title mb-3">Return & Refund Policy</h1>
-    <p class="section-text">Effective date: <span id="yearHome">2025</span> • Cathy's Dreamy Attire™</p>
+      <section class="section" style="padding-top: 90px;">
+        <div class="policy-content">
+          <div class="policy-card">
+    <h1>Return & Refund Policy</h1>
+    <p class="policy-meta">Effective date: <span class="policy-effective-year">2025</span> • <strong class="policy-brand-name"></strong></p>
 
     <p class="section-text">We use handwoven material for our products; therefore, it may have some irregularities in weaves and can't be considered a defect.</p>
     <p>We can't give any guarantees on colour fastness. Natural dyes like indigo will bleed during the first wash and we cannot offer any returns/exchanges in such cases.</p>
@@ -130,7 +131,8 @@
 
     <hr style="margin: 30px 0;" />
 
-  </div>
+        </div>
+      </div>
       </section>
     </article>
   </main>
@@ -145,7 +147,7 @@
             <img src="../assets/images/logo.png" alt="" class="penguin-logo img-fluid" />
           </a>
           <p>
-            At <strong id="footer-brand-strong"></strong>, we believe every woman deserves to feel confident and beautiful in outfits made just for her.
+            At <strong class="footer-brand-name"></strong>, we believe every woman deserves to feel confident and beautiful in outfits made just for her.
             We specialize in custom designing, personalized outfit customization, and offer a handpicked collection through our exclusive online boutique.
           </p>
           <hr />
