--- a/policies/shipping-policy.html
+++ b/policies/shipping-policy.html
@@ -65,10 +65,11 @@
 
   <main>
     <article>
-      <section class="section" style="padding-top: 120px;">
-        <div class="container">
-    <h1 class="h2 section-title mb-3">Shipping Policy</h1>
-    <p class="section-text">Effective date: <span id="yearHome">2025</span> • Cathy's Dreamy Attire™</p>
+      <section class="section" style="padding-top: 90px;">
+        <div class="policy-content">
+          <div class="policy-card">
+    <h1>Shipping Policy</h1>
+    <p class="policy-meta">Effective date: <span class="policy-effective-year">2025</span> • <strong class="policy-brand-name"></strong></p>
 
     <h5>Processing Time</h5>
     <p class="section-text">
@@ -109,7 +110,8 @@ Custom or made-to-order items may take 7–14 business days, and we will notify 
 
     <hr style="margin: 30px 0;" />
 
-  </div>
+        </div>
+      </div>
       </section>
     </article>
   </main>
@@ -124,7 +126,7 @@ Custom or made-to-order items may take 7–14 business days, and we will notify 
             <img src="../assets/images/logo.png" alt="" class="penguin-logo img-fluid" />
           </a>
           <p>
-            At <strong id="footer-brand-strong"></strong>, we believe every woman deserves to feel confident and beautiful in outfits made just for her.
+            At <strong class="footer-brand-name"></strong>, we believe every woman deserves to feel confident and beautiful in outfits made just for her.
             We specialize in custom designing, personalized outfit customization, and offer a handpicked collection through our exclusive online boutique.
           </p>
           <hr />
