--- a/policies/privacy-policy.html
+++ b/policies/privacy-policy.html
@@ -65,13 +65,14 @@
 
   <main>
     <article>
-      <section class="section" style="padding-top: 120px;">
-        <div class="container">
-    <h1 class="h2 section-title mb-3">Privacy Policy</h1>
-    <p class="section-text">Effective date: <span id="yearHome">2025</span> • Cathy's Dreamy Attire™</p>
+      <section class="section" style="padding-top: 90px;">
+        <div class="policy-content">
+          <div class="policy-card">
+    <h1>Privacy Policy</h1>
+    <p class="policy-meta">Effective date: <span class="policy-effective-year"></span> • <strong class="policy-brand-name"></strong></p>
 
-    <p class="section-text">
-      At <strong>Cathy's Dreamy Attire™</strong>, your privacy matters. We collect only the information
+    <p>
+      At <strong class="policy-brand-name"></strong>, your privacy matters. We collect only the information
       needed to process orders and provide customer support. This typically includes your name, phone number,
       shipping address, city and pincode, and, if provided, email address.
     </p>
@@ -108,7 +109,8 @@
     </p>
 
     <hr style="margin: 30px 0;" />
-  </div>
+        </div>
+      </div>
       </section>
     </article>
   </main>
@@ -123,7 +125,7 @@
             <img src="../assets/images/logo.png" alt="" class="penguin-logo img-fluid" />
           </a>
           <p>
-            At <strong id="footer-brand-strong"></strong>, we believe every woman deserves to feel confident and beautiful in outfits made just for her.
+            At <strong class="footer-brand-name"></strong>, we believe every woman deserves to feel confident and beautiful in outfits made just for her.
             We specialize in custom designing, personalized outfit customization, and offer a handpicked collection through our exclusive online boutique.
           </p>
           <hr />
