--- a/policies/privacy-policy.html
+++ b/policies/privacy-policy.html
@@ -13,7 +13,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Privacy Policy • Cathy's Dreamy Attire</title>
+  <title>Privacy Policy</title>
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="../assets/css/style.css">
