--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     - custom css link
   -->
   <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/ui-modals.css">
 
   <!-- Font Awesome 5 (icons used throughout the site) -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" crossorigin="anonymous">
@@ -28,6 +29,14 @@
 </head>
 
 <body id="top">
+
+  <!-- 
+    - #PRELOADER
+  -->
+  <div class="preloader" data-preloader>
+    <div class="preloader-spinner"></div>
+  </div>
+
 
   <!-- 
     - #HEADER
@@ -341,6 +350,25 @@
   </footer>
 
   <!-- 
+    - #MOBILE BOTTOM NAVIGATION
+  -->
+  <nav class="mobile-bottom-nav">
+    <a href="#top" class="mobile-nav-link">
+      <ion-icon name="home-outline"></ion-icon>
+      <span>Home</span>
+    </a>
+    <a href="#product-section" class="mobile-nav-link">
+      <ion-icon name="grid-outline"></ion-icon>
+      <span>Shop</span>
+    </a>
+    <button class="mobile-nav-link" id="mobile-cart-btn">
+      <ion-icon name="bag-outline"></ion-icon>
+      <span>Cart</span>
+      <span class="nav-action-badge" id="mobileCartBadge" aria-live="polite" style="display:none">0</span>
+    </button>
+  </nav>
+
+  <!-- 
     - #GO TO TOP
   -->
 
@@ -360,6 +388,9 @@
 
   <!-- Core site scripts and features -->
   <script src="./assets/js/store.js"></script>
+
+  <!-- Custom UI Modals -->
+  <script src="./assets/js/ui-modals.js"></script>
 
   <!-- CSV-driven renderers for sections -->
   <script src="./assets/js/csv-render.js"></script>
