--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Cookie&family=Twinkle+Star&display=swap" rel="stylesheet">
 
   <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WYB41RBFGS"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-WYB41RBFGS');
+  </script>
 </head>
 
 <body id="top">
@@ -34,7 +44,7 @@
     - #PRELOADER
   -->
   <div class="preloader" data-preloader>
-    <div class="preloader-spinner"></div>
+    <img src="assets/images/logo.png" alt="Loading..." class="preloader-logo">
   </div>
 
 
